--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.show-sql=true
 # h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+#JWT
+forum.jwt.secret=$2a$10$5Z157tH7pbvOZLifF8jPau939xVK.Vezydjds.pot9HWqXl8fDFsa
+forum.jwt.expiration=86400000
